--- a/SampleHouseInfo.API/appsettings.Production.json
+++ b/SampleHouseInfo.API/appsettings.Production.json
@@ -1,10 +1,10 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Warning"
+        "Microsoft": "Debug",
+        "System": "Debug"
       }
     }
   }
